third_party/move/move-compiler-v2/tests/recursive-instantiation-checker/v1-tests/mutually_recursive_type_con.exp

Diagnostics:
error: cyclic type instantiation
  ┌─ tests/recursive-instantiation-checker/v1-tests/mutually_recursive_type_con.move:7:9
  │
7 │     fun f<T>() {
  │         ^
  │
  = `f<T>` calls `g<M::S<T>>` at tests/recursive-instantiation-checker/v1-tests/mutually_recursive_type_con.move:7
  = `g<M::S<T>>` calls `f<M::S<T>>` at tests/recursive-instantiation-checker/v1-tests/mutually_recursive_type_con.move:8,
    A cycle of recursive calls causes the instantiation to recurse infinitely.

error: cyclic type instantiation
   ┌─ tests/recursive-instantiation-checker/v1-tests/mutually_recursive_type_con.move:11:9
   │
11 │     fun g<T>() {
   │         ^
   │
   = `g<T>` calls `f<T>` at tests/recursive-instantiation-checker/v1-tests/mutually_recursive_type_con.move:11
   = `f<T>` calls `g<M::S<T>>` at tests/recursive-instantiation-checker/v1-tests/mutually_recursive_type_con.move:12,
     A cycle of recursive calls causes the instantiation to recurse infinitely.
